<resources>
    <string name="key_func_janitor">func_janitor</string>
    <string name="key_func_door">func_door</string>
    <string name="key_func_nvr">func_nvr</string>
    <string name="key_func_call">func_call</string>
    <string name="key_func_ctrl">func_ctrl</string>
    <string name="btn_upgrade_app">Upgrading</string>
    <string name="btn_main_scn_setting">Function Display</string>
    <string name="btn_mic_setting">MIC Gain</string>
    <string name="btn_activate_setting">Activate Code</string>
    <string name="btn_trigger_setting">Triggers</string>
    <string name="btn_sys_setting">Gateway</string>
    <string name="btn_control_setting">Control Panel</string>
    <string name="btn_dp_setting">Intercom</string>
    <string name="btn_zwave_setting">ZWave devices</string>
    <string name="btn_scene_setting">Scene</string>
    <string name="btn_janitor_setting">Janitor</string>
    <string name="btn_nvr_setting">IP Camera</string>
    <string name="lbl_cam_name">Camera name</string>
    <string name="lbl_ip_addr">IP address</string>
    <string name="lbl_acc">Account</string>
    <string name="lbl_pwd">Password</string>
    <string name="lbl_mac">MAC address</string>
    <string name="btn_call">Call</string>
    <string name="btn_answer">Talk</string>
    <string name="btn_hangup">End Talk</string>
    <string name="btn_mute">Mute</string>
    <string name="btn_snap">Snap</string>
    <string name="btn_open">Open</string>
    <string name="key_security_sip">security_sip</string>
    <string name="lbl_sip">SIP ID</string>
    <string name="key_rtsp_url">rtsp_url</string>
    <string name="key_cam_00">cam_00</string>
    <string name="key_cam_01">cam_01</string>
    <string name="key_cam_02">cam_02</string>
    <string name="key_cam_03">cam_03</string>
    <string name="key_cam_04">cam_04</string>
    <string name="key_cam_05">cam_05</string>
    <string name="key_cam_"></string>
    <string name="key_cam_ip">ip</string>
    <string name="key_cam_label">label</string>
    <string name="key_cam_acc">acc</string>
    <string name="key_cam_pwd">pwd</string>
    <string name="key_cam_mac">mac</string>
    <string name="btn_janitor">Janitor</string>
    <string name="btn_intercom">Intercom</string>
    <string name="btn_camera">Camera</string>
    <string name="btn_contacts">Contacts</string>
    <string name="btn_control">Control</string>
    <string name="btn_settings">Settings</string>
    <string name="key_camlist">cam_list</string>
    <string name="key_sipserver">sipserver</string>
    <string name="key_enableCameraSpeaker">enableCameraSpeaker</string>
    <string name="key_mac">mac</string>
    <string name="key_sipPwd">sipPwd</string>
    <string name="key_enableAlarm">enableAlarm</string>
    <string name="key_manualNvrStart">manualNvrStart</string>
    <string name="key_ringtime">ringtime</string>
    <string name="key_sipid">sipid</string>
    <string name="key_cameraName">cameraName</string>
    <string name="key_ownsipid">ownsipid</string>
    <string name="key_nvrMode">nvrMode</string>
    <string name="key_nvrSchedule">nvrSchedule</string>
    <string name="key_upnp">upnp</string>
    <string name="key_enableCameraMic">enableCameraMic</string>
    <string name="key_stunserver2">stunserver2</string>
    <string name="key_stunserver">stunserver</string>
    <string name="key_dial_list">dial_list</string>
    <string name="key_cam_data">cam_data</string>
    <string name="qualia_url">https://54.215.11.15:8443/Qualia/</string>
    <string name="contact_title">聯絡人</string>
    <string name="weather_url">http://weather.yahooapis.com/forecastrss</string>
    <string name="woeid_url">http://query.yahooapis.com/v1/public/yql?q=select%20woeid%20from%20geo.placefinder%20where%20text=%22{0},{1}%22%20and%20gflags=%22R%22</string>
    <string name="maintain_title">Maintenance Login</string>
    <string name="maintain_user">admin</string>
    <string name="maintain_pwd">admin</string>
    <string name="login">Login</string>
    <string name="login_name">Username</string>
    <string name="login_pwd">Password</string>
    <string name="add_dp">Add</string>
    <string name="key_dp_ip">ip</string>
    <string name="key_dp_label">label</string>
    <string name="key_dp_acc">acc</string>
    <string name="key_dp_pwd">pwd</string>
    <string name="key_dp_sip">sip</string>
    <string name="key_dplist">dp_list</string>
    <string name="okLbl">OK</string>
    <string name="cancelLbl">Cancel</string>
    <string name="local_url_pattern">http://%1$s:%2$s/</string>
    <string name="scenepost">scenepost.html</string>
    <string name="refreshpost">refreshpost.html</string>
    <string name="valuepost">valuepost.html</string>
    <string name="panel_list">panel_list.cgi</string>
    <string name="key_gateway_ip">gatewayIp</string>
    <string name="key_gateway_port">gatewayPort</string>
    <string name="key_acc">acc</string>
    <string name="key_pwd">pwd</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="action_save">Save</string>
    <string name="action_rename">Rename Panel</string>
    <string name="action_add_panel">Add Panel</string>
    <string name="action_remove">Remove</string>
    <string name="action_add_cam">Add Cam</string>
    <string name="action_match_scn">Match Camera scn</string>
    <string name="title_activity_door">DoorActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mjpeg">MjpegActivity</string>
    <string name="pref_disable_account">Disable</string>
    <string name="pref_tunnel">Tunnel</string>
    <string name="pref_tunnel_host">Hostname</string>
    <string name="pref_tunnel_port">Port</string>
    <string name="pref_tunnel_mode">Mode</string>
    <string-array name="tunnel_mode_entries">
        <item>disabled</item>
        <item>3G only</item>
        <item>always</item>
        <item>auto</item>
    </string-array>
    <string name="incall_notif_active">Audio call ongoing</string>
    <string name="incall_notif_paused">Paused call ongoing</string>
    <string name="incall_notif_video">Video capturing call ongoing</string>
    <string name="not_ready_to_make_new_call">Not ready for a new call</string>
    <string name="bad_target_uri">Bad contact : %s</string>
    <string name="reset_sas_fmt">Reset verified %s</string>
    <string name="verify_sas_fmt">Verify %s</string>
    <string name="communication_encrypted">Encrypted</string>
    <string name="waiting_for_startup">Starting up&#8230;</string>
    <string name="couldnt_accept_call">An error occurred while accepting call</string>
    <string name="error_adding_new_call">Error adding new call</string>
    <string name="transfer_started">Transfer initiated</string>
    <string name="transfer_dialog_title">Transfer call to</string>
    <string name="transfer_to_new_call">New call</string>
    <string name="resume_dialog_title">Resume call</string>
    <string name="cannot_resume_paused_by_remote_call">Cannot resume call paused by remote</string>
    <string name="conf_show_details_text">Show details</string>
    <string name="skipable_error_service_not_ready">Warning: service is not ready</string>
    <string name="close_button_text">Close</string>
    <string name="status_conf_call">conf</string>
    <string name="status_active_call">active</string>
    <string name="state_paused">paused</string>
    <string name="state_paused_by_remote">paused by remote</string>
    <string name="state_streams_running"></string>
    <string name="state_incoming_received">incoming</string>
    <string name="state_outgoing_ringing">ringing</string>
    <string name="state_outgoing_progress">calling</string>
    <string name="mutemic_button_txt">Mute</string>
    <string name="speaker_button_txt">Speaker</string>
    <string name="bluetooth_button_txt">Bluetooth</string>
    <string name="CancelButtonText">Cancel</string>
    <string name="AddCallButtonText">Add call</string>
    <string name="TransferCallButtonText">Transfer call</string>
    <string name="conf_admin_choice_enter">Enter conference</string>
    <string name="conf_admin_choice_leave">Momentarily leave conference</string>
    <string name="conf_admin_choice_terminate">Terminate conference</string>
    <string name="hangup">Hang up</string>
    <string name="conf_simple_merge_bt_txt">Merge</string>
    <string name="conf_simple_transfer_bt_txt">Transfer</string>
    <string name="conf_simple_video_bt_txt">video</string>
    <string name="show_send_dtmfs_button">Dialpad</string>
    <string name="conf_conference">Conference</string>
    <string name="in_conf">You are part of it</string>
    <string name="in_conf_leave">Go out</string>
    <string name="out_conf">You are out of it</string>
    <string name="out_conf_enter">Go in</string>
    <string name="pref_audio_hacks_title">Audio hacks</string>
    <string name="pref_audio_use_specific_mode_title">Use specific mode hack</string>
    <string name="pref_audio_use_specific_mode_summary">0=MODE_NORMAL (default), 2=MODE_IN_CALL</string>
    <string name="pref_audio_hacks_use_routing_api_title">Use routing API hack</string>
    <string name="pref_audio_hacks_use_galaxys_hack_title">Use Galaxy S audio hack</string>
    <string name="pref_audio_soft_volume_title">Use software volume</string>
    <string name="pref_ipv6_title">Use ipv6 instead of ipv4</string>
    <string name="error_while_accepting_pending_call">Error while accepting pending call</string>
    <string name="incoming_call_dialog_title">%s is calling you</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="unknown_incoming_call_name">Unknown</string>
    <string name="pref_network_title">Network</string>
    <string name="pref_transport">Transport</string>
    <string name="pref_transport_udp">UDP</string>
    <string name="pref_transport_tcp">TCP</string>
    <string name="pref_transport_tls">TLS</string>
    <string name="pref_transport_use_random_ports">Use random ports</string>
    <string name="pref_sip_port_title">SIP port to use</string>
    <string name="at_least_a_protocol">At least one item is required</string>
    <string name="first_launch_ok">Registration successful</string>
    <string name="error">Error</string>
    <string name="click_to_show_first_login_view">Start</string>
    <string name="dialer_null_on_new_intent">Application not ready</string>
    <string name="pref_add_account">Add account</string>
    <string name="no_phone_numbers">No phone numbers found for %s</string>
    <string name="filter_contacts">Filter contacts</string>
    <string name="title_numbers_dialog">%s\'s phone numbers</string>
    <string name="pref_delete_account">Delete this account</string>
    <string name="pref_default_account">Use as default</string>
    <string name="pref_echo_canceller_calibration">Echo canceller calibration</string>
    <string name="pref_video_use_front_camera_title">Use front camera</string>
    <string name="pref_video">Video</string>
    <string name="pref_preferences">Preferences</string>
    <string name="pref_video_codec_h263_title">H263</string>
    <string name="pref_video_codec_mpeg4_title">MPEG4</string>
    <string name="pref_video_codec_h264_title">H264</string>
    <string name="pref_video_codecs_title">Codecs</string>
    <string name="pref_preferred_video_size">Preferred video size</string>
    <string name="menu_videocall_back_to_dialer_title">Display dialer</string>
    <string name="menu_videocall_switch_camera_title">Front/Rear Camera</string>
    <string name="menu_videocall_change_resolution_when_low_resolution">Try High resolution</string>
    <string name="menu_videocall_change_resolution_when_high_resolution">Low resolution</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
</resources>